Changes for 1.1beta5:

 - calculated minimum Y in graphs (Alexei)
 - added configurable number of plain text elements for screens (Alexei)
 - added screens_items.elements (Alexei)
 - escalations removed from GUI (Alexei)
 - fixed typo in tr_comments.php (Alexei)

Changes for 1.1beta4:

 - fixed system.swap.size (Eugene)
 - fixed vm.memory.size (Eugene)
 - fixed configuration file parsing for user specifed functions (Eugene)
 - added support of system.cpu.load for Tru64 (Eugene)
 - added support of system.cpu.util for Tru64 (Eugene)
 - added support of vm.memory.size for Tru64 (Eugene)
 - added support of proc.num for Tru64 (Eugene)
 - fixed processing of UserParameters which are pre/postfixed with spaces (Alexei)
 - fixed processing of SNMP and simple checks (Alexei)
 - fixed compilation with --with-ldap (Alexei)
 - SNMP string values to be automatically converted to numeric (Alexei)
 - fixed nodata() processing when used with host 'status' (Alexei)
 - fixed conflict with MySQL headers (Eugene)

Changes for 1.1beta3:

 - improved support vfs.file.time[filename,<access|modify|change>] (Eugene)
 - calculate MAX of Y axis based on average values (Alexei)
 - automatic recovery of unsupported items (Alexei)
 - added config.refresh_unsupported (Alexei)
 - added housekeeping for history_uint (Alexei)
 - double sided graphs (Alexei)
 - added "SET_<TYPE>_RESULT" macross (Eugene)
 - new W32 un/install floppy. (Eugene)
 - added script for GUI regression testing (Alexei)
 - reverted multiple server patch (Alexei)
 - fixed autoregistration (Alexei)
 - added preliminary bulk host and bulk user loader.  (James)
 - applied Graph Dropdown fix.  Thanks to Elkor (James)
 - applied SNMPv3 fix.  Thanks to Sauron (James)  --  Please note I do not
 have any SNMPv3 items to test this with, but it did complete and server runs
 after build.
 - added column graphs_items.yaxisside (Alexei)
 - startup script for Tru64 (Alexei)