@@ -38,8 +38,28 @@
 
 	function	update_action( $actionid, $triggerid, $userid, $good, $delay, $subject, $message, $scope, $severity, $recipient, $usrgrpid, $maxrepeats, $repeatdelay)
 	{
-		delete_action($actionid);
-		return add_action( $triggerid, $userid, $good, $delay, $subject, $message, $scope, $severity, $recipient, $usrgrpid, $maxrepeats, $repeatdelay);
+		if(!check_right_on_trigger("A",$triggerid))
+		{
+                        error("Insufficient permissions");
+                        return 0;
+		}
+
+		if($recipient == RECIPIENT_TYPE_USER)
+		{
+			$id = $userid;
+		}
+		else
+		{
+			$id = $usrgrpid;
+		}
+		$subject=addslashes($subject);
+		$message=addslashes($message);
+
+		$sql="update actions set triggerid=$triggerid,userid=$id,good=$good,delay=$delay,nextcheck=0,subject='$subject',message='$message',scope=$scope,severity=$severity,recipient=$recipient,maxrepeats=$maxrepeats,repeatdelay=$repeatdelay where actionid=$actionid";
+		$result=DBexecute($sql);
+		$trigger=get_trigger_by_triggerid($triggerid);
+		info("Action '$subject' for trigger '".$trigger["description"]."' updated");
+		return $result;
 	}
 
 	# Add Action
@@ -86,6 +106,8 @@
 			$result=DBexecute($sql);
 			return DBinsert_id($result,"actions","actionid");
 		}
+		$trigger=get_trigger_by_triggerid($triggerid);
+		info("Action '$subject' for trigger '".$trigger["description"]."' added");
 	}
 
 	# Delete Action by userid
@@ -172,31 +194,84 @@
 		$trigger=get_trigger_by_triggerid($action["triggerid"]);
 
 		$sql="select distinct h.hostid from hosts h,functions f, items i where i.itemid=f.itemid and h.hostid=i.hostid and f.triggerid=".$action["triggerid"];
-		$result=DBselect($sql);
-		if(DBnum_rows($result)!=1)
+		$result=dbselect($sql);
+		if(dbnum_rows($result)!=1)
 		{
 			return;
 		}
 
-		$row=DBfetch($result);
+		$row=dbfetch($result);
 
 		$hostid=$row["hostid"];
 
 		$sql="select hostid,templateid,actions from hosts_templates where templateid=$hostid";
-		$result=DBselect($sql);
-		while($row=DBfetch($result))
+		$result=dbselect($sql);
+		#enumerate hosts
+		while($row=dbfetch($result))
 		{
 			if($row["actions"]&4 == 0)	continue;
 
 			$sql="select distinct f.triggerid from functions f,items i,triggers t where t.description='".addslashes($trigger["description"])."' and t.triggerid=f.triggerid and i.itemid=f.itemid and i.hostid=".$row["hostid"];
-			$result2=DBselect($sql);
-			while($row2=DBfetch($result2))
+			$result2=dbselect($sql);
+			#enumerate triggers
+			while($row2=dbfetch($result2))
 			{
-				$sql="select actionid from actions where triggerid=".$row2["triggerid"]." and subject='".addslashes($action["subject"])."' and message='".addslashes($action["message"])."' and userid=".$action["userid"]." and good=".$action["good"]." and scope=".$action["scope"]." and recipient=".$action["recipient"]." and severity=".$action["severity"];
-				$result3=DBselect($sql);
-				while($row3=DBfetch($result3))
+				$sql="select actionid from actions where triggerid=".$row2["triggerid"]." and subject='".addslashes($action["subject"])."' and userid=".$action["userid"]." and good=".$action["good"]." and scope=".$action["scope"]." and recipient=".$action["recipient"]." and severity=".$action["severity"];
+				$result3=dbselect($sql);
+				#enumerate actions
+				while($row3=dbfetch($result3))
 				{
 					delete_action($row3["actionid"]);
+				}
+			}
+		}
+	}
+
+	# Update action from hardlinked hosts
+
+	function	update_action_from_linked_hosts($actionid)
+	{
+		if($actionid<=0)
+		{
+			return;
+		}
+
+		$action=get_action_by_actionid($actionid);
+		$trigger=get_trigger_by_triggerid($action["triggerid"]);
+
+		$sql="select distinct h.hostid from hosts h,functions f, items i where i.itemid=f.itemid and h.hostid=i.hostid and f.triggerid=".$action["triggerid"];
+		$result=dbselect($sql);
+		if(dbnum_rows($result)!=1)
+		{
+			return;
+		}
+
+		$row=dbfetch($result);
+
+		$hostid=$row["hostid"];
+		$host_template=get_host_by_hostid($hostid);
+
+		$sql="select hostid,templateid,actions from hosts_templates where templateid=$hostid";
+		$result=dbselect($sql);
+		#enumerate hosts
+		while($row=dbfetch($result))
+		{
+			if($row["actions"]&2 == 0)	continue;
+
+			$sql="select distinct f.triggerid from functions f,items i,triggers t where t.description='".addslashes($trigger["description"])."' and t.triggerid=f.triggerid and i.itemid=f.itemid and i.hostid=".$row["hostid"];
+			$result2=dbselect($sql);
+			#enumerate triggers
+			while($row2=dbfetch($result2))
+			{
+				$sql="select actionid from actions where triggerid=".$row2["triggerid"]." and subject='".addslashes($action["subject"])."'";
+				$result3=dbselect($sql);
+				#enumerate actions
+				while($row3=dbfetch($result3))
+				{
+					$host=get_host_by_hostid($row["hostid"]);
+					$message=str_replace("{".$host_template["host"].":", "{".$host["host"].":", $action["message"]);
+					update_action($row3["actionid"], $row2["triggerid"], $action["userid"], $action["good"], $action["delay"], $action["subject"], $message, $action["scope"], $action["severity"], $action["recipient"], $action["userid"], $action["maxrepeats"],$action["repeatdelay"]);
+
 				}
 			}
 		}
