@@ -1,5 +1,7 @@
 Changes for 1.1beta5:
 
+ - added 'update' operation for triggers of template hosts (Eugene)
+ - added 'update' operation for operations of template hosts (Eugene)
  - calculated minimum Y in graphs (Alexei)
  - added configurable number of plain text elements for screens (Alexei)
  - added screens_items.elements (Alexei)
